ongoing move of capstone to new repo

--- a/.gitignore
+++ b/.gitignore
@@ -142,13 +142,13 @@ msdscript
 test_msdscript
 .a
 .zip
-.yaml
-.yml
-
-*.yaml
-*.yml
 *.cache
 *.app
 **/dist/
 */build/
 /build/
+.app
+*.zip
+.mov
+*.mov
+
